# libmodbus

./: CMakeLists.txt  libmodbus-config.h.in
cmake/: modbus-config.cmake
cmake/Modules/: GitTagVersioning.cmake
src/: CMakeLists.txt
tests/: CMakeLists.txt
